# rs-common

./: .gitignore  Cargo.toml  DEPENDENCY_UPGRADE_NOTES.md  LICENSE  Makefile  README.md  common.mk
crates/bitflip/: Cargo.toml
crates/dsp/: Cargo.toml
crates/healed-serde/: Cargo.toml  Makefile  README.md
crates/healed-serde/benches/: encode_decode_bench.rs  json_serialize_bench.rs  rs_phase2_bench.rs
crates/healed-serde/src/: compression.rs  ecc.rs  error.rs  frame.rs  lib.rs  metadata.rs  rs.rs  tmr.rs  vault.rs
crates/hlac/: Cargo.toml  README.md
crates/hlac/benches/: hlac_bench.rs
crates/hlac/src/: binary.rs  lib.rs  mask.rs
crates/hlac/testdata/phase31_output/: .gitignore
crates/hlac/tests/: phase31_puzzle_test.rs
crates/jetson-pixfmt/: Cargo.toml
crates/jetson-pixfmt/benches/: format_bench.rs
crates/jetson-pixfmt/src/: lib.rs  pixfmt.rs  t16.rs
crates/jetson-rttrace/: Cargo.toml
crates/mls-mpm/: Cargo.toml
crates/plugin-base/: Cargo.toml
crates/rawproc/: Cargo.toml
crates/rawproc/src/: lib.rs
crates/rhythm-core/: Cargo.toml  README.md
crates/rhythm-core/examples/: cli_sync.rs  udp_multicast.rs
crates/rhythm-core/src/: comm.rs  consts.rs  fixed_math.rs  lib.rs  util.rs
crates/rhythm-core/tests/: integration_test.rs  udp_multicast_integration.rs
crates/v4l-serve/: Cargo.toml  README.md
crates/v4l-serve/src/: capture.rs  context.rs  device.rs  lib.rs  service.rs  util.rs
crates/wasm-plugin-hello/: Cargo.toml  Makefile  README.md
crates/wasm-plugin-hello/benches/: wasm_call.rs
crates/wasm-plugin-hello/src/: bindings.rs  lib.rs
crates/wasm-plugin-hello/wit/: world.wit
crates/wasm-util/: Cargo.toml
crates/wasm-util/src/: __reexport.rs  error.rs  image.rs  lib.rs  macros.rs  time.rs  util.rs
crates/wasm-util/tests/: image.rs  macros.rs  time.rs  util.rs
crates/wgpu-common/: Cargo.toml
crates/wgpu-shader/: Cargo.toml  build.rs
crates/wgpu-shader/src/: camera.rs  common.rs  constraint.rs  graph.rs  lib.rs  model.rs  prelude.rs  texture.rs  uniform.rs  util.rs  vertex.rs
crates/wgpu-shader/src/colored/: README.md  compress.rs  compress.wgsl  instanced.rs  instanced.wgsl  mod.rs  shader.rs  unif.rs  unif.wgsl
crates/wgpu-shader/src/gltf/: mod.rs  vertex_color.rs  vertex_color.wgsl  vertex_normal.rs
crates/wgpu-shader/src/introduction/: mod.rs  shader.rs  shader.wgsl
crates/wgpu-shader/src/lines/: instanced.rs  mod.rs  shader.rs  shader.wgsl
crates/wgpu-shader/src/particle/: mod.rs  shader.rs  shader.wgsl
crates/wgpu-shader/src/rgltf/: mod.rs  vertex_color.rs  vertex_color.wgsl  vertex_normal.rs  vertex_normal.wgsl
crates/wgpu-shader/src/texture/: mod.rs  shader.rs  shader.wgsl
crates/wgpu-shader/src/tutorial/: light.rs  light.wgsl  mod.rs  shader.rs  shader.wgsl
crates/wgpu-shader/src/types/: mod.rs
crates/xegl/: Cargo.toml
crates/xegl/src/: error.rs  lib.rs
examples/check-feature/: Cargo.toml  Makefile  README.md
examples/egui-learn/: Cargo.toml
examples/egui-learn/src/: app.rs  gltf_view.rs  main.rs  render.rs  shader.rs  tf.rs  ui.rs
examples/egui-learn/testdata/: box2.glb
examples/iced-learn/: Cargo.toml
examples/iced-learn/src/: main.rs  server.rs
examples/iced-learn/src/scene/: mod.rs
examples/moonbit-runner/: Cargo.toml  Makefile  README.md
examples/moonbit-runner/benches/: criterion_bench.rs
examples/moonbit-runner/plugin-versions/: plugin_v1.wasm
examples/moonbit-runner/plugins/: control.component.wasm  control.core.symbolized.wasm  control.core.wasm
examples/moonbit-runner/src/: bindings.rs  context.rs  engine.rs  lib.rs  main.rs  plugin_manager.rs  raw_runner.rs  runner.rs  version_manager.rs
examples/moonbit-runner/tests/: plugin_integration.rs  reload_memory_check.rs
examples/moonbit-runner/wit/: world.wit
examples/plotter-with-plugin/: Cargo.toml
examples/plotter-with-plugin/src/: main.rs  plot.rs  plugin.rs  wrun.rs
examples/preview-server/: Cargo.toml
examples/preview-server/assets/: index.html  index.js
examples/preview-server/assets/mls-mpm/: index.html  index.js
examples/preview-server/src/: main.rs
examples/v4l-server/: Cargo.toml
examples/v4l-server/debian/: postinst  prerm  v4l-server.service
examples/v4l-server/src/: capture.rs  device.rs  error.rs  imgfmt.rs  main.rs
examples/vulkan-demo/: Cargo.toml
examples/vulkan-demo/src/: camera.rs  env.rs  lib.rs  main.rs  resources.rs  state.rs
examples/vulkan-demo/src/render/: mod.rs  scene.rs
examples/wasm-mls-mpm/: Cargo.toml  Makefile
examples/wasm-mls-mpm/src/: entrypoint.rs  lib.rs  shader.rs  shader.wgsl  state.rs
examples/wasm-preview/: Cargo.toml  Makefile
examples/wasmtime-runner/: Cargo.toml  Makefile  README.md
examples/wasmtime-runner/config/: config.yaml
examples/wasmtime-runner/plugins/: calc.wasm  composed.wasm  hasdep.wasm  hello-wasip2.wasm  hello.wasm
examples/wasmtime-runner/src/: bindings.rs  bingings.rs  context.rs  main.rs
examples/wgpu-generate/: Cargo.toml  build.rs
examples/wgpu-generate/src/: lib.rs  main.rs  state.rs
examples/wgpu-generate/src/render/: mod.rs
examples/wgpu-vulkan/: Cargo.toml
examples/wgpu-vulkan/src/: lib.rs  main.rs
jetson/camrtc/: Cargo.toml
jetson/camrtc/src/: lib.rs
jetson/pixfmt/: Makefile
safety-plugin/host/: Cargo.toml  Makefile  README.md
safety-plugin/host/benches/: ffi_overhead.rs  request_latency.rs
safety-plugin/host/src/: lib.rs  main.rs  plugin_manager.rs  so_plugin_handle.rs  version_manager.rs
safety-plugin/host/tests/: multi_plugin_integration.rs  plugin_integration.rs  reload_memory_check.rs  sample_integration.rs
wasm-comp/: wasm.mk
wasm-comp/hasdep/: Cargo.toml  Makefile
wasm-comp/hasdep/src/: bindings.rs  lib.rs
wasm-comp/hasdep/wit/: world.wit
wasm-comp/hello/: Cargo.toml  Makefile
wasm-comp/hello/benches/: wasm_call.rs
wasm-comp/hello/src/: bindings.rs  lib.rs
wasm-comp/hello/wit/: world.wit
wasm-comp/plugin-buffer/: Cargo.toml  Makefile
wasm-comp/plugin-buffer/src/: bindings.rs  lib.rs
wasm-comp/plugin-filter/: Cargo.toml
wasm-comp/plugin-filter/src/: lib.rs
(+46 files in other folders)
