[workspace]
members = ["crates/*", "jetson/*", "examples/*", "wasm-comp/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["FUJIANKA Fumiya <uzuna.kf@gmail.com>"]
repository = "https://github.com/uzuna/rs-common"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
bytemuck = "1.25.0"
byteorder = "1.5"
cfg-if = "1.0.4"
clap = "4.5.60"
criterion = "0.5.1"
dsp = { path = "crates/dsp" }
eframe = "0.31.1"
egui = "0.31.1"
fs-err = "3.3.0"
fxhash = "0.2.1"
image = { version = "0.25", default-features = false }
jetson-pixfmt = { path = "jetson/pixfmt" }
khronos-egl = "6.0.0"
mls-mpm = { path = "crates/mls-mpm" }
nalgebra = "0.33.2"
num-traits = "0.2.19"
rand = "0.9.2"
rawproc = { path = "crates/rawproc" }
serde = "1.0.228"
serde_yaml = "0.9.34"
tempfile = "3.26.0"
thiserror = "2.0.18"
tokio = "1.50.0"
tokio-util = "0.7.18"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
v4l = { git = "ssh://git@github.com/uzuna/libv4l-rs.git", rev = "0bbbc4c5" }
v4l-serve = { path = "crates/v4l-serve" }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
wasm-util = { path = "crates/wasm-util" }
wasmtime = "33.0.2"
wasmtime-wasi = "33.0.2"
web-sys = "0.3"
wgpu = "24.0.5"
wgpu-shader = { path = "crates/wgpu-shader" }
xegl = { path = "crates/xegl" }
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[profile.release.package.wasm-preview]
opt-level = 3
