[workspace]
members = ["crates/*", "jetson/*", "examples/*", "wasm-comp/*", "pycrates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["FUJIANKA Fumiya <uzuna.kf@gmail.com>"]
repository = "https://github.com/uzuna/rs-common"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
bytemuck = "1.25.0"
byteorder = "1.5"
cfg-if = "1.0.4"
clap = "4.5.60"
criterion = "0.8.2"
dsp = { path = "crates/dsp" }
eframe = "0.33.3"
egui = "0.33.3"
fs-err = "3.3.0"
fxhash = "0.2.1"
image = { version = "0.25", default-features = false }
jetson-pixfmt = { path = "jetson/pixfmt" }
khronos-egl = "6.0.0"
mls-mpm = { path = "crates/mls-mpm" }
nalgebra = "0.34.1"
num-traits = "0.2.19"
rand = "0.10.0"
rawproc = { path = "crates/rawproc" }
rhythm-core = { path = "crates/rhythm-core" }
serde = "1.0.228"
serde_yaml = "0.9.34"
tempfile = "3.26.0"
thiserror = "2.0.18"
tokio = "1.50.0"
tokio-util = "0.7.18"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
v4l = { git = "ssh://git@github.com/uzuna/libv4l-rs.git", rev = "0bbbc4c5" }
v4l-serve = { path = "crates/v4l-serve" }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
wasm-util = { path = "crates/wasm-util" }
wasmtime = "42.0.1"
wasmtime-wasi = "42.0.1"
web-sys = "0.3"
wgpu = "27.0.1"
wgpu-shader = { path = "crates/wgpu-shader" }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
xegl = { path = "crates/xegl" }

[profile.release.package.wasm-preview]
opt-level = 3
