[package]
name = "healed-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
secded = "1.1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
crc = "3.4.0"
bincode = "=1.3.3"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
criterion.workspace = true

[[bench]]
name = "json_serialize_bench"
harness = false
