[package]
name = "healed-serde"
version = "0.1.1"
edition = "2021"

[features]
default = ["zstd-compression"]
zstd-compression = ["dep:zstd"]

[dependencies]
secded = "1.1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
crc = "3.4.0"
bincode = "=1.3.3"
bitflip = { path = "../bitflip" }
reed-solomon-erasure = "6.0"
zstd = { version = "0.13.3", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
criterion.workspace = true

[[bench]]
name = "json_serialize_bench"
harness = false

[[bench]]
name = "encode_decode_bench"
harness = false

[[bench]]
name = "rs_phase2_bench"
harness = false
