[package]
name = "hlac"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wide = "1.2.0"

[dev-dependencies]
criterion.workspace = true
image = { workspace = true, features = ["webp", "png"] }
ndarray.workspace = true

[[bench]]
name = "hlac_bench"
harness = false
