[package]
name = "rawproc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
image.workspace = true
ndarray = "0.16.1"
num-traits = "0.2.19"

[dev-dependencies]
image = { workspace = true, features = ["png"] }
