[package]
name = "rawproc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
image.workspace = true
ndarray.workspace = true
num-traits.workspace = true

[dev-dependencies]
image = { workspace = true, features = ["png"] }
