[package]
name = "rhythm-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }

[dev-dependencies]
crossterm = "0.29.0"
serde_json = "1.0"
