[package]
name = "rhythm-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["serde/std", "dep:socket2", "dep:nix"]

[dependencies]
nix = { version = "0.30.1", features = ["time"], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
socket2 = { version = "0.5", optional = true }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
serde_json = "1.0"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }

# 実装完了まで無視する
[[example]]
name = "cli_sync"
required-features = ["std"]
[[example]]
name = "udp_multicast"
required-features = ["std"]
