[package]
name = "v4l-serve"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
image = { workspace = true, features = ["png"] }
jetson-pixfmt.workspace = true
rawproc.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
tokio-util.workspace = true
tracing.workspace = true
v4l = { workspace = true, features = ["tokio", "aligned-alloc"] }
yuvutils-rs = "0.5.1"
