[package]
name = "wasm-plugin-hello"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm-plugin-hello"

[package.metadata.component.dependencies]
