[package]
name = "wasm-plugin-hello"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
dsp.workspace = true

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
wasmtime.workspace = true

[[bench]]
name = "wasm_call"
harness = false

[package.metadata.component]
package = "component:wasm-plugin-hello"

[package.metadata.component.dependencies]
