[package]
name = "wasm-util"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["console_error_panic_hook"]
time = ["dep:futures-util"]
macros = ["web-sys/console"]
image = ["web-sys/HtmlImageElement"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true}
futures-util = { version = "0.3.31", optional = true }
wasm-bindgen = "0.2.95"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlElement",
    "Performance",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.20"
futures = "0.3.31"
