[package]
name = "wasm-util"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["console_error_panic_hook"]
time = ["dep:futures-util"]
macros = ["web-sys/console"]
image = ["web-sys/HtmlImageElement", "dep:futures-util"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true}
futures-util = { version = "0.3.31", optional = true }
wasm-bindgen.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "Document",
    "HtmlElement",
    "Performance",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
futures = "0.3.31"
