[package]
name = "wgpu-shader"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck = { version = "1.24", features = ["derive"] }
encase = { version = "0.10.0", features = ["glam"] }
fxhash.workspace = true
glam = { version = "0.29.3", features = ["bytemuck"] }
wgpu.workspace = true
nalgebra = { workspace = true, features = ["convert-glam029"] }

[build-dependencies]
wgsl_to_wgpu = "0.13.1"
glob = "0.3.3"

[dev-dependencies]
approx = "0.5.1"
