[package]
name = "wgpu-shader"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
encase = { version = "0.12.0" }
fxhash.workspace = true
glam = { version = "0.30.10", features = ["bytemuck", "encase"] }
wgpu.workspace = true
nalgebra = { workspace = true, features = ["convert-glam030"] }

[build-dependencies]
wgsl_to_wgpu = "0.17.1"
glob = "0.3.3"

[dev-dependencies]
approx.workspace = true
