[package]
name = "iced-learn"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytesize = "2.0.1"
iced = { version = "0.13.0", features = ["system"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
