[package]
name = "iced-learn"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytesize = "2.0.1"
dirs = "6.0.0"
iced = { version = "0.13.0", features = ["system"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde.workspace = true
serde_json = "1.0.140"
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
