[package]
name = "preview-server"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum =  "0.7.5"
tokio = { version = "1.40.0", features = ["macros"] }
tower-http = { version = "0.5.0",  features = ["fs", "trace"]  }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
