[package]
name = "preview-server"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["macros"] }
tower-http = { workspace = true,  features = ["fs", "trace"]  }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
