[package]
name = "v4l-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.93"
axum.workspace = true
image = { version = "0.25", features = ["png"], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
tokio-util = "0.7.12"
tower-http = { workspace = true,  features = ["fs", "trace"]  }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
v4l = { workspace = true, features = ["tokio", "aligned-alloc"] }
yuvutils-rs = "0.5.1"
jetson-pixfmt.workspace = true
clap = { version = "4.5.20", features = ["derive"] }

[package.metadata.deb]
maintainer = "FUJIANKA Fumiya <uzuna.kf@gmail.com>"
copyright = "2024, FUJIANKA Fumiya <uzuna.kf@gmail.com>"
license-file = ["../../LICENSE"]
section = "utility"
priority = "optional"
assets = [
    ["target/release/v4l-server", "usr/bin/", "755"],
]

maintainer-scripts = "debian/"
systemd-units = [
    { unit-name = "v4l-server" },
]
