[package]
name = "vulkan-demo"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck = { version = "1.25", features = ["derive"] }
cfg-if = "1"
encase = { version = "0.12.0" }
env_logger = "0.11"
fxhash = "0.2.1"
glam = { version = "0.30.10", features = ["bytemuck", "encase"] }
image = { workspace = true, features = ["png", "jpeg"], default-features = false }
log = "0.4"
nalgebra = { workspace = true, features = ["convert-glam030"] }
pollster = "0.4"
thiserror.workspace = true
tobj = { version = "4.0.3", features = ["async"] }
wgpu-shader.workspace = true
wgpu.workspace = true
winit = { version = "0.30", features = ["rwh_05"] }
