[package]
name = "wasm-mls-mpm"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "app"

[build]
target = "wasm32-unknown-unknown"

[dependencies]
bytemuck = "1.22.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
log = "0.4.26"
mls-mpm.workspace = true
nalgebra.workspace = true
rand = { workspace = true, features = ["std"] }
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
wasm-logger = "0.2.0"
wasm-util = { workspace = true}
wgpu = { version = "24.0.1", features = ["webgl"] }
winit = { version = "0.29", features = ["rwh_05"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
workspace = true
features = [
    "HtmlCanvasElement",
]

