[package]
name = "wasmtime-runner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[package.metadata.component.target.dependencies]
"local:hello" = { path = "../../wasm-comp/hello" }
