[package]
name = "wasmtime-runner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
fxhash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"
serde_yaml.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
