[package]
name = "safety-plugin-host"
version = "0.1.0"
edition = "2021"

[lib]
name = "safety_plugin_host"
path = "src/lib.rs"

[[bin]]
name = "safety-plugin-host"
path = "src/main.rs"

[dependencies]
abi_stable = "0.11"
safety-plugin-common = { path = "../common" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
notify = "8"
signal-hook = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
