[package]
name = "safety-plugin-host"
version = "0.1.0"
edition = "2021"

[lib]
name = "safety_plugin_host"
path = "src/lib.rs"

[[bin]]
name = "safety-plugin-host"
path = "src/main.rs"

[dependencies]
abi_stable = "0.11"
libloading = "0.8"
safety-plugin-common = { path = "../common" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
http-body-util = "0.1"
notify = "8"
serde_json = { workspace = true }
signal-hook = "0.3"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
name = "request_latency"
harness = false

[[bench]]
name = "ffi_overhead"
harness = false

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
