[package]
# crateのための名前
name = "wasm-plugin-hello"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dsp.workspace = true
wit-bindgen-rt.workspace = true

# バイナリ名はかぶりにくいのでシンプルに保つ
[lib]
crate-type = ["cdylib"]
name = "hello"

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
wasmtime.workspace = true

# WASM夜這いだしコストや実行速度の差を確認
[[bench]]
name = "wasm_call"
harness = false

